--- a/cart.html
+++ b/cart.html
@@ -41,7 +41,7 @@
         <div class="cart-items">
             <div class="cart-row">
                 <div class="cart-item cart-column">
-                    <img class="cart-item-image" src="m1.webp" width="100" height="100">
+                    <img class="cart-item-image" src="images/m1.webp" width="100" height="100">
                     <span class="cart-item-title">Crocin 650mg Advance Tablets 15'S</span>
                 </div>
                 <span class="cart-price cart-column">Rs 29.13</span>
@@ -52,7 +52,7 @@
             </div>
             <div class="cart-row">
                 <div class="cart-item cart-column">
-                    <img class="cart-item-image" src="p1.webp" width="100" height="100">
+                    <img class="cart-item-image" src="images/p1.webp" width="100" height="100">
                     <span class="cart-item-title">Liveasy Essentials Handwash Pump 250 Ml</span>
                 </div>
                 <span class="cart-price cart-column">Rs 72</span>
@@ -63,7 +63,7 @@
             </div>
             <div class="cart-row">
               <div class="cart-item cart-column">
-                  <img class="cart-item-image" src="m4.webp" width="100" height="100">
+                  <img class="cart-item-image" src="images/m4.webp" width="100" height="100">
                   <span class="cart-item-title">Neurobion Forte Tablet 30'S</span>
               </div>
               <span class="cart-price cart-column">Rs 38.4</span>
@@ -74,7 +74,7 @@
           </div>
           <div class="cart-row">
             <div class="cart-item cart-column">
-                <img class="cart-item-image" src="f1.webp" width="100" height="100">
+                <img class="cart-item-image" src="images/f1.webp" width="100" height="100">
                 <span class="cart-item-title">Protinex Rich Chocolate Nutrition Drink Tin Of 400 G</span>
             </div>
             <span class="cart-price cart-column">Rs 572</span>
